ydtpack/pack_template.h

static inline int ydtpack_pack_int(ydtpack_packer* x, int d)
{
#if defined(SIZEOF_INT)
#if SIZEOF_INT == 2
    ydtpack_pack_real_int16(x, d);
#elif SIZEOF_INT == 4
    ydtpack_pack_real_int32(x, d);
#else
    ydtpack_pack_real_int64(x, d);
#endif

#elif defined(INT_MAX)
#if INT_MAX == 0x7fff
    ydtpack_pack_real_int16(x, d);
#elif INT_MAX == 0x7fffffff
    ydtpack_pack_real_int32(x, d);
#else
    ydtpack_pack_real_int64(x, d);
#endif

#else
if(sizeof(int) == 2) {
    ydtpack_pack_real_int16(x, d);
} else if(sizeof(int) == 4) {
    ydtpack_pack_real_int32(x, d);
} else {
    ydtpack_pack_real_int64(x, d);
}
#endif
}
static inline int ydtpack_pack_long(ydtpack_packer* x, long d)
{
#if defined(SIZEOF_LONG)
#if SIZEOF_LONG == 2
    ydtpack_pack_real_int16(x, d);
#elif SIZEOF_LONG == 4
    ydtpack_pack_real_int32(x, d);
#else
    ydtpack_pack_real_int64(x, d);
#endif

#elif defined(LONG_MAX)
#if LONG_MAX == 0x7fffL
    ydtpack_pack_real_int16(x, d);
#elif LONG_MAX == 0x7fffffffL
    ydtpack_pack_real_int32(x, d);
#else
    ydtpack_pack_real_int64(x, d);
#endif

#else
if(sizeof(long) == 2) {
    ydtpack_pack_real_int16(x, d);
} else if(sizeof(long) == 4) {
    ydtpack_pack_real_int32(x, d);
} else {
    ydtpack_pack_real_int64(x, d);
}
#endif
}
static inline int ydtpack_pack_long_long(ydtpack_packer* x, long long d)
{
#if defined(SIZEOF_LONG_LONG)
#if SIZEOF_LONG_LONG == 2
    ydtpack_pack_real_int16(x, d);
#elif SIZEOF_LONG_LONG == 4
    ydtpack_pack_real_int32(x, d);
#else
    ydtpack_pack_real_int64(x, d);
#endif

#elif defined(LLONG_MAX)
#if LLONG_MAX == 0x7fffL
    ydtpack_pack_real_int16(x, d);
#elif LLONG_MAX == 0x7fffffffL
    ydtpack_pack_real_int32(x, d);
#else
    ydtpack_pack_real_int64(x, d);
#endif

#else
if(sizeof(long long) == 2) {
    ydtpack_pack_real_int16(x, d);
} else if(sizeof(long long) == 4) {
    ydtpack_pack_real_int32(x, d);
} else {
    ydtpack_pack_real_int64(x, d);
}
#endif
}
static inline int ydtpack_pack_unsigned_long_long(ydtpack_packer* x, unsigned long long d)
{
#if defined(SIZEOF_LONG_LONG)
#if SIZEOF_LONG_LONG == 2
    ydtpack_pack_real_uint16(x, d);
#elif SIZEOF_LONG_LONG == 4
    ydtpack_pack_real_uint32(x, d);
#else
    ydtpack_pack_real_uint64(x, d);
#endif

#elif defined(ULLONG_MAX)
#if ULLONG_MAX == 0xffffUL
    ydtpack_pack_real_uint16(x, d);
#elif ULLONG_MAX == 0xffffffffUL
    ydtpack_pack_real_uint32(x, d);
#else
    ydtpack_pack_real_uint64(x, d);
#endif

#else
if(sizeof(unsigned long long) == 2) {
    ydtpack_pack_real_uint16(x, d);
} else if(sizeof(unsigned long long) == 4) {
    ydtpack_pack_real_uint32(x, d);
} else {
    ydtpack_pack_real_uint64(x, d);
}
#endif
}
//#undef ydtpack_pack_inline_func_cint
//#endif



/*
 * Float
 */

static inline int ydtpack_pack_float(ydtpack_packer* x, float d)
{
    unsigned char buf[5];
    buf[0] = 0xca;

#if PY_VERSION_HEX >= 0x030B00A7
    PyFloat_Pack4(d, (char *)&buf[1], 0);
#else
    _PyFloat_Pack4(d, &buf[1], 0);
#endif
    ydtpack_pack_append_buffer(x, buf, 5);
}
static inline int ydtpack_pack_double(ydtpack_packer* x, double d)
{
    unsigned char buf[9];
    buf[0] = 0xcb;
#if PY_VERSION_HEX >= 0x030B00A7
    PyFloat_Pack8(d, (char *)&buf[1], 0);
#else
    _PyFloat_Pack8(d, &buf[1], 0);
#endif
    ydtpack_pack_append_buffer(x, buf, 9);
}
/*
 * Nil
 */

static inline int ydtpack_pack_nil(ydtpack_packer* x)
{
    static const unsigned char d = 0xc0;
    ydtpack_pack_append_buffer(x, &d, 1);
}
/*
 * Boolean
 */

static inline int ydtpack_pack_true(ydtpack_packer* x)
{
    static const unsigned char d = 0xc3;
    ydtpack_pack_append_buffer(x, &d, 1);
}
static inline int ydtpack_pack_false(ydtpack_packer* x)
{
    static const unsigned char d = 0xc2;
    ydtpack_pack_append_buffer(x, &d, 1);
}
/*
 * Array
 */

static inline int ydtpack_pack_array(ydtpack_packer* x, unsigned int n)
{
    if(n < 16) {
        unsigned char d = 0x90 | n;
        ydtpack_pack_append_buffer(x, &d, 1);
    } else if(n < 65536) {
        unsigned char buf[3];
        buf[0] = 0xdc; _ydtpack_store16(&buf[1], (uint16_t)n);
        ydtpack_pack_append_buffer(x, buf, 3);
    } else {
        unsigned char buf[5];
        buf[0] = 0xdd; _ydtpack_store32(&buf[1], (uint32_t)n);
        ydtpack_pack_append_buffer(x, buf, 5);
    }
}
/*
 * Map
 */

static inline int ydtpack_pack_map(ydtpack_packer* x, unsigned int n)
{
    if(n < 16) {
        unsigned char d = 0x80 | n;
        ydtpack_pack_append_buffer(x, &TAKE8_8(d), 1);
    } else if(n < 65536) {
        unsigned char buf[3];
        buf[0] = 0xde; _ydtpack_store16(&buf[1], (uint16_t)n);
        ydtpack_pack_append_buffer(x, buf, 3);
    } else {
        unsigned char buf[5];
        buf[0] = 0xdf; _ydtpack_store32(&buf[1], (uint32_t)n);
        ydtpack_pack_append_buffer(x, buf, 5);
    }
}
/*
 * Raw
 */

static inline int ydtpack_pack_raw(ydtpack_packer* x, size_t l)
{
    if (l < 32) {
        unsigned char d = 0xa0 | (uint8_t)l;
        ydtpack_pack_append_buffer(x, &TAKE8_8(d), 1);
    } else if (x->use_bin_type && l < 256) {  // str8 is new format introduced with bin.
        unsigned char buf[2] = {0xd9, (uint8_t)l};
        ydtpack_pack_append_buffer(x, buf, 2);
    } else if (l < 65536) {
        unsigned char buf[3];
        buf[0] = 0xda; _ydtpack_store16(&buf[1], (uint16_t)l);
        ydtpack_pack_append_buffer(x, buf, 3);
    } else {
        unsigned char buf[5];
        buf[0] = 0xdb; _ydtpack_store32(&buf[1], (uint32_t)l);
        ydtpack_pack_append_buffer(x, buf, 5);
    }
}
/*
 * bin
 */
static inline int ydtpack_pack_bin(ydtpack_packer *x, size_t l)
{
    if (!x->use_bin_type) {
        return ydtpack_pack_raw(x, l);
    }
    if (l < 256) {
        unsigned char buf[2] = {0xc4, (unsigned char)l};
        ydtpack_pack_append_buffer(x, buf, 2);
    } else if (l < 65536) {
        unsigned char buf[3] = {0xc5};
        _ydtpack_store16(&buf[1], (uint16_t)l);
        ydtpack_pack_append_buffer(x, buf, 3);
    } else {
        unsigned char buf[5] = {0xc6};
        _ydtpack_store32(&buf[1], (uint32_t)l);
        ydtpack_pack_append_buffer(x, buf, 5);
    }
}
static inline int ydtpack_pack_raw_body(ydtpack_packer* x, const void* b, size_t l)
{
    if (l > 0) ydtpack_pack_append_buffer(x, (const unsigned char*)b, l);
    return 0;
}