ydtpack/pack.h

#define inline __inline
typedef struct ydtpack_packer {
    char *buf;
    size_t length;
    size_t buf_size;
    bool use_bin_type;
} ydtpack_packer;
typedef struct Packer Packer;
// return -2 when o is too long
static inline int
ydtpack_pack_unicode(ydtpack_packer *pk, PyObject *o, long long limit)
{
    assert(PyUnicode_Check(o));

    Py_ssize_t len;
    const char* buf = PyUnicode_AsUTF8AndSize(o, &len);
    if (buf == NULL)
        return -1;

    if (len > limit) {
        return -2;
    }

    int ret = ydtpack_pack_raw(pk, len);
    if (ret) return ret;

    return ydtpack_pack_raw_body(pk, buf, len);
}